Add bottom navigation

--- a/Android/Shopking/app/src/main/res/values/dimens.xml
+++ b/Android/Shopking/app/src/main/res/values/dimens.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="ic_launcher_background">#CCE6F4</color>
+    <dimen name="bottom_navigation_corner_radius">20dp</dimen>
 </resources>
