--- a/Android/Shopking/app/src/main/res/values/colors.xml
+++ b/Android/Shopking/app/src/main/res/values/colors.xml
@@ -2,5 +2,10 @@
 <resources>
     <color name="shopking_red">#D62839</color>
     <color name="shopking_dark_blue">#175676</color>
+    <color name="shopking_medium_blue">#4BA3C3</color>
     <color name="shopking_blue">#CCE6F4</color>
+
+    <color name="white">#FFFFFF</color>
+    <color name="black">#000000</color>
+    <color name="medium_black">#AB000000</color>
 </resources>
