--- a/Android/Shopking/app/src/main/res/values/styles.xml
+++ b/Android/Shopking/app/src/main/res/values/styles.xml
@@ -30,4 +30,10 @@
         <item name="android:fontFamily">@font/open_sans_bold</item>
     </style>
 
+    <style name="CategoryName">
+        <item name="android:textSize">@dimen/category_item_text_size</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:fontFamily">@font/open_sans_bold</item>
+    </style>
+
 </resources>
