--- a/Android/Shopking/app/src/main/res/values/styles.xml
+++ b/Android/Shopking/app/src/main/res/values/styles.xml
@@ -36,4 +36,10 @@
         <item name="android:fontFamily">@font/open_sans_bold</item>
     </style>
 
+    <style name="ToolbarTitle">
+        <item name="android:textSize">@dimen/toolbar_title_text_size</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:fontFamily">@font/open_sans_semi_bold</item>
+    </style>
+
 </resources>
