--- a/Android/Shopking/app/src/main/res/values/dimens.xml
+++ b/Android/Shopking/app/src/main/res/values/dimens.xml
@@ -30,6 +30,7 @@
 
     <dimen name="ingredient_text_size">12sp</dimen>
     <dimen name="recipe_description_text_size">12sp</dimen>
+    <dimen name="see_all_text_size">12sp</dimen>
 
     <dimen name="toolbar_title_text_size">36sp</dimen>
     <dimen name="toolbar_description_text_size">12sp</dimen>
