Add Shopping list and Wish list

--- a/Android/Shopking/app/src/main/res/layout/ingredient_item.xml
+++ b/Android/Shopking/app/src/main/res/layout/ingredient_item.xml
@@ -9,9 +9,10 @@
 
     <CheckBox
         android:id="@+id/ingredient_item_shopping_list"
-        style="?android:attr/textViewStyle"
+        android:button="@drawable/ic_shopping_list_add"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
         android:layout_marginEnd="@dimen/article_list_item_sale_icon_margin_end" />
 
     <CheckBox
