--- a/Android/Shopking/app/src/main/res/layout/card_item.xml
+++ b/Android/Shopking/app/src/main/res/layout/card_item.xml
@@ -4,17 +4,38 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="@dimen/article_list_item_height"
-    android:clipToPadding="true"
-    android:foreground="?android:attr/selectableItemBackground"
     android:clickable="true"
-    app:cardElevation="@dimen/article_list_item_elevation"
+    android:clipToPadding="true"
+    android:focusable="true"
+    android:foreground="?android:attr/selectableItemBackground"
     app:cardBackgroundColor="@color/white"
     app:cardCornerRadius="@dimen/article_list_item_corner_radius"
-    android:focusable="true">
+    app:cardElevation="@dimen/article_list_item_elevation">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
+        <CheckBox
+            android:id="@+id/article_list_item_shopping_list"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="@dimen/article_list_item_sale_icon_margin_end"
+            android:button="@drawable/ic_shopping_list_add"
+            app:layout_constraintBottom_toBottomOf="@id/article_list_item_wish_list"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@id/article_list_item_wish_list" />
+
+        <CheckBox
+            android:id="@+id/article_list_item_wish_list"
+            style="?android:attr/starStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="@dimen/article_list_item_sale_icon_margin_end"
+            android:layout_marginTop="@dimen/article_list_item_sale_icon_margin_top"
+            android:buttonTint="@color/checkbox_color"
+            app:layout_constraintEnd_toStartOf="@id/article_list_item_shopping_list"
+            app:layout_constraintTop_toBottomOf="@id/article_list_item_sale_icon" />
 
         <ImageView
             android:id="@+id/article_list_item_image"
@@ -26,6 +47,31 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:srcCompat="@drawable/app_icon_blue" />
+
+        <TextView
+            android:id="@+id/article_list_item_price"
+            style="@style/ArticlePrice"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/article_list_item_text_margin_horizontal"
+            android:layout_marginTop="@dimen/article_list_item_description_margin_top"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/article_list_item_description"
+            tools:text="100kn" />
+
+        <TextView
+            android:id="@+id/article_list_item_sale_icon"
+            style="@style/ArticleSale"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="@dimen/article_list_item_sale_icon_margin_end"
+            android:layout_marginTop="@dimen/article_list_item_sale_icon_margin_top"
+            android:background="@drawable/sale_bg"
+            android:paddingHorizontal="@dimen/article_list_item_sale_icon_padding_horizontal"
+            android:paddingVertical="@dimen/article_list_item_sale_icon_padding_vertical"
+            android:text="@string/article_list_sale"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/article_list_item_image" />
 
         <TextView
             android:id="@+id/article_list_item_name"
@@ -58,51 +104,6 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/article_list_item_name"
             tools:text="K Plus • 300g" />
-
-        <TextView
-            android:id="@+id/article_list_item_price"
-            style="@style/ArticlePrice"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/article_list_item_text_margin_horizontal"
-            android:layout_marginTop="@dimen/article_list_item_description_margin_top"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/article_list_item_description"
-            tools:text="100kn" />
-
-        <TextView
-            android:id="@+id/article_list_item_sale_icon"
-            style="@style/ArticleSale"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="@dimen/article_list_item_sale_icon_margin_end"
-            android:layout_marginTop="@dimen/article_list_item_sale_icon_margin_top"
-            android:background="@drawable/sale_bg"
-            android:paddingHorizontal="@dimen/article_list_item_sale_icon_padding_horizontal"
-            android:paddingVertical="@dimen/article_list_item_sale_icon_padding_vertical"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/article_list_item_image"
-            android:text="@string/article_list_sale" />
-
-        <CheckBox
-            android:id="@+id/article_list_item_shopping_list"
-            style="?android:attr/textViewStyle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="@dimen/article_list_item_sale_icon_margin_end"
-            android:layout_marginTop="@dimen/article_list_item_sale_icon_margin_top"
-            app:layout_constraintTop_toBottomOf="@id/article_list_item_sale_icon"/>
-
-        <CheckBox
-            android:id="@+id/article_list_item_wish_list"
-            style="?android:attr/starStyle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintEnd_toStartOf="@id/article_list_item_shopping_list"
-            android:layout_marginEnd="@dimen/article_list_item_sale_icon_margin_end"
-            android:layout_marginTop="@dimen/article_list_item_sale_icon_margin_top"
-            app:layout_constraintTop_toBottomOf="@id/article_list_item_sale_icon"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
